--- a/Origamid/css/style.css
+++ b/Origamid/css/style.css
@@ -13,6 +13,15 @@ body {
   background-repeat: no-repeat;
 }
 
+.plano__lista li{
+  padding: 1rem;
+  border-bottom: 1px solid rgba(0,0,0,.2);
+}
+
+.plano__lista li+li {
+  padding: 1rem;
+}
+
 @media (max-width: 767px) {
   #home-quote .display-4{
     font-size: 2.5rem;
